--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ background-color: rgb(18, 98, 207)
  
  width: 800px;
  margin:0 auto;
- background-color: white;
+ background-color: rgb(18, 97, 207);
  text-align: center;
  align-content: center;
 }
