--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #405DE6;
 }
 
 @media (max-width: 992px) {
