--- a/style.css
+++ b/style.css
@@ -1,78 +1,164 @@
+:root {
+	font-size: 62.5%;
+	margin: 0;
+}
+
+html {
+	box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	text-align: center;
+	border-radius: 50px;
+	font-family: "Kollektif";
+}
+
 h1 {
-    font-family: "Mansalva";
-    font-size: 90px;
-    text-align: center;
-    color: rgba(0, 246, 219);
-    position: fixed;
-    right: 400;
-    bottom: 435;
-    z-index: 598;
-    border-radius: 50px;
-  }
-
-  h2 {
-    font-family: "Kollektif";
-    font-size: 20px;
-    text-align: center;
-    color: rgba(0, 246, 219);
-    position: fixed;
-    right: 350;
-    bottom: 350;
-    z-index: 598;
-    border-radius: 50px;
-  }
-
-
-  h3 {
-    font-family: "Kollektif";
-    font-size: 17px;
-    text-align: center;
-    color: rgba(0, 246, 219);
-    position: fixed;
-    right: 300;
-    bottom: 15px;
-    z-index: 598;
-    border-radius: 50px;
-  }
-
-  h4 {
-    font-family: "Kollektif";
-    font-size: 17px;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    position: fixed;
-    right: 520;
-    bottom: -15px;
-    z-index: 598;
-    border-radius: 50px;
-  }
-
-  h5 {
-    font-family: "Arial";
-    color:rgb(246, 0, 0);
-    position: fixed;
-    left: 0;
-    bottom: -15px;
-    z-index: 598;
-    border-radius: 50px;
-  }
-
-  body {
-    width: 100%;
-    height: 100vh;
-    background: url("https://cdn.discordapp.com/attachments/794895791248244746/890191175213019146/Erreur_404_-_Elie_Concept2.png") top right no-repeat;
-    background-size: cover;
-    position: relative;
+	font-family: "Mansalva";
+	font-size: 9rem;
+	color: rgba(0, 246, 219);
+	margin: 3rem 0 1rem;
+	line-height: 9rem;
 }
-img {
-  position: absolute;
-  left: 180;
-  top: -90px;
-  z-index: -1;
+
+h2 {
+	font-size: 2rem;
+	color: rgba(0, 246, 219);
 }
-  a {
-    font-family: "Kollektif";
-    font-size: 17px;
-    text-align: center;
-    color: rgba(0, 246, 219); 
+
+h3 {
+	font-size: 1.7rem;
+	color: rgba(0, 246, 219);
+}
+
+h4 {
+	font-size: 1.7rem;
+	color: rgb(255, 255, 255);
+}
+
+h5 {
+	font-family: "Arial";
+	color: rgb(246, 0, 0);
+}
+
+p {
+	font-size: 1.6rem;
+	color: rgba(0, 246, 219);
+}
+
+body {
+	width: 100%;
+	height: 100vh;
+	background: url("https://cdn.discordapp.com/attachments/794895791248244746/890191175213019146/Erreur_404_-_Elie_Concept2.png")
+		center center no-repeat fixed;
+	background-size: cover;
+	margin: 0;
+}
+
+main {
+	width: 100%;
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	justify-content: space-between;
+	position: relative;
+}
+
+.text {
+	padding-bottom: 3rem;
+}
+
+.text-union {
+	padding: 1rem;
+}
+
+.text-union > p {
+	margin: 0;
+	line-height: 2.6rem;
+	text-align: center;
+}
+
+.contact-list-icons {
+	max-width: 700px;
+	padding: 1rem 2rem;
+	margin: 0 auto 3rem;
+	border: 2px solid black;
+	background: rgba(17, 16, 59, 0.5);
+	backdrop-filter: blur(6px);
+	transition: background-color 0.6s;
+}
+
+.contact-list-icons:hover {
+	background: rgba(17, 16, 59, 0.8);
+}
+
+.contact-list-icons h2 {
+	margin-top: 0;
+}
+
+.contact-list-icons > ul {
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+.contact-list-icons > ul > li {
+	padding: 1rem;
+}
+
+.cat {
+	z-index: -1;
+	position: absolute;
+	height: 350px;
+	width: 100%;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	overflow: hidden;
+}
+
+.cat > .oh {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.oh > img {
+	position: absolute;
+	width: 495px;
+	height: 169px;
+	left: 50%;
+	bottom: 0;
+	transform: translateX(-50%) rotate(-45deg);
+}
+
+small {
+	color: greenyellow;
+	padding: 1rem;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+a {
+	font-family: "Kollektif";
+	font-size: 1.7rem;
+	text-align: center;
+	color: rgba(0, 246, 219);
+	transition: color 0.3s ease-out;
+	padding: 0.3rem;
+	text-underline-offset: 0.2rem;
+}
+
+a:hover {
+	color: red;
 }
