--- a/elbot/assets/css/style.css
+++ b/elbot/assets/css/style.css
@@ -28,6 +28,11 @@ a:hover {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
 }
+h8 {
+  font-family: "Poppins", sans-serif;
+  color:limegreen
+
+}
 
 /*--------------------------------------------------------------
 # Back to top button
@@ -1667,6 +1672,11 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
+}
+h8 {
+  font-family: "Poppins", sans-serif;
+  color:limegreen
+
 }
 
 /*--------------------------------------------------------------
