--- a/elbot/assets/css/style.css
+++ b/elbot/assets/css/style.css
@@ -33,7 +33,11 @@ h8 {
   color:limegreen
 
 }
+h9 {
+  font-family: "Poppins", sans-serif;
+  color:red
 
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -1678,6 +1682,12 @@ h8 {
   color:limegreen
 
 }
+}
+h9 {
+  font-family: "Poppins", sans-serif;
+  color:red
+
+}
 
 /*--------------------------------------------------------------
 # Back to top button
@@ -3295,4 +3305,4 @@ section {
   color: #fff;
   text-decoration: none;
 }
-}
+
