--- a/elbot/assets/css/style.css
+++ b/elbot/assets/css/style.css
@@ -38,6 +38,11 @@ h10 {
   color:red
 
 }
+h11 {
+  font-family: "Poppins", sans-serif;
+  font-size: 6;
+  color : white
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -1686,6 +1691,11 @@ h10 {
   font-family: "Poppins", sans-serif;
   color:red
 
+}
+h11 {
+  font-family: "Poppins", sans-serif;
+  font-size: 6;
+  color : black
 }
 /*--------------------------------------------------------------
 # Back to top button
